objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Discount_Amount__c</fullName>
        <formula>Discount * UnitPrice</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Code_Bookmark__c</fullName>
        <formula>&quot;b_&quot;&amp;SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(PricebookEntry.Product2.ProductCode, &quot; &quot;, &quot;_&quot;),&quot;.&quot;,&quot;_&quot;),&quot;-&quot;,&quot;_&quot;),&quot;/&quot;,&quot;_&quot;)</formula>
        <label>Product Code Bookmark</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name_Copy2__c</fullName>
        <description>Copy of the Product Name to check Opportunity for 3561 product inside</description>
        <label>Product Name Copy2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name_Copy_Formula__c</fullName>
        <formula>PricebookEntry.Product2.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name Copy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary_Code__c</fullName>
        <formula>PricebookEntry.Product2.Product_Transaction_Summaries__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Summary Code</label>
        <type>Text</type>
    </fields>
</CustomObject>